# texture-diffusion

./: .gitignore  :  LICENSE  README.md  __init__.py  blender_manifest.toml  mesh_collection.py  pyproject.toml
src/: __init__.py
src/functions/: utils.py
src/operators/: __init__.py  generation.py  generation_operators.py  history_collection_operators.py  image_render_operators.py  mesh_collection.py  mesh_collection_operators.py
src/panels/: __init__.py  backend_panel.py  diffusion_panel.py  history_panel.py
src/properties/: __init__.py  backend_properties.py  diffusion_properties.py  history_properties.py
workflows/: controlnet_depth.json  controlnet_depth_ipadapter.json  flux_workflow.json  sdxl_workflow.json  total_workflow.json
